--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,14 @@
                 </ul>
                 <ul class="filter-list">
                     <li class="filter-list__item">
-                        <a href="#" class="filter-link"><img class="filter-list__item-img"
-                                src="images/portfolio-img-1.jpg" alt="Веб-сайт Технокряк">
+                        <a href="#" class="filter-link">
+                            <div class="filter-link-thumb">
+                                <img class="filter-list__item-img" src="images/portfolio-img-1.jpg"
+                                    alt="Веб-сайт Технокряк">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="filter-list__item-border">
                                 <h2 class="filter-list__item-title">Технокряк</h2>
                                 <p class="filter-list__item-text">Веб-сайт
@@ -76,8 +82,14 @@
                         </a>
                     </li>
                     <li class="filter-list__item">
-                        <a href="#" class="filter-link"><img class="filter-list__item-img"
-                                src="images/portfolio-img-2.jpg" alt="Постер New Orlean vs Golden Star">
+                        <a href="#" class="filter-link">
+                            <div class="filter-link-thumb">
+                                <img class="filter-list__item-img" src="images/portfolio-img-2.jpg"
+                                    alt="Постер New Orlean vs Golden Star">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="filter-list__item-border">
                                 <h2 class="filter-list__item-title">Постер New Orlean vs Golden Star</h2>
                                 <p class="filter-list__item-text">Дизайн</p>
@@ -85,8 +97,15 @@
                         </a>
                     </li>
                     <li class="filter-list__item">
-                        <a href="#" class="filter-link"><img class="filter-list__item-img"
-                                src="images/portfolio-img-3.jpg" alt="Ресторан Seafood">
+                        <a href="#" class="filter-link">
+                            <div class="filter-link-thumb">
+                                <img class="filter-list__item-img" src="images/portfolio-img-3.jpg"
+                                    alt="Ресторан Seafood">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="filter-list__item-border">
                                 <h2 class="filter-list__item-title">Ресторан Seafood</h2>
                                 <p class="filter-list__item-text">Додаток</p>
@@ -94,8 +113,14 @@
                         </a>
                     </li>
                     <li class="filter-list__item">
-                        <a href="#" class="filter-link"><img class="filter-list__item-img"
-                                src="images/portfolio-img-4.jpg" alt="Проєкт Prime">
+                        <a href="#" class="filter-link">
+                            <div class="filter-link-thumb">
+                                <img class="filter-list__item-img" src="images/portfolio-img-4.jpg" alt="Проєкт Prime">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="filter-list__item-border">
                                 <h2 class="filter-list__item-title">Проєкт Prime</h2>
                                 <p class="filter-list__item-text">Маркетинг</p>
@@ -103,8 +128,14 @@
                         </a>
                     </li>
                     <li class="filter-list__item">
-                        <a href="#" class="filter-link"><img class="filter-list__item-img"
-                                src="images/portfolio-img-5.jpg" alt="Проєкт Boxes">
+                        <a href="#" class="filter-link">
+                            <div class="filter-link-thumb">
+                                <img class="filter-list__item-img" src="images/portfolio-img-5.jpg" alt="Проєкт Boxes">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем
+                                    функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="filter-list__item-border">
                                 <h2 class="filter-list__item-title">Проєкт Boxes</h2>
                                 <p class="filter-list__item-text">Додаток</p>
@@ -112,8 +143,14 @@
                         </a>
                     </li>
                     <li class="filter-list__item">
-                        <a href="#" class="filter-link"><img class="filter-list__item-img"
-                                src="images/portfolio-img-6.jpg" alt="Веб-сайт Inspiration has no Borders">
+                        <a href="#" class="filter-link">
+                            <div class="filter-link-thumb">
+                                <img class="filter-list__item-img" src="images/portfolio-img-6.jpg"
+                                    alt="Веб-сайт Inspiration has no Borders">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="filter-list__item-border">
                                 <h2 class="filter-list__item-title">Inspiration has no Borders</h2>
                                 <p class="filter-list__item-text">Веб-сайт</p>
@@ -121,8 +158,14 @@
                         </a>
                     </li>
                     <li class="filter-list__item">
-                        <a href="#" class="filter-link"><img class="filter-list__item-img"
-                                src="images/portfolio-img-7.jpg" alt="Видання Limited Edition">
+                        <a href="#" class="filter-link">
+                            <div class="filter-link-thumb">
+                                <img class="filter-list__item-img" src="images/portfolio-img-7.jpg"
+                                    alt="Видання Limited Edition">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="filter-list__item-border">
                                 <h2 class="filter-list__item-title">Видання Limited Edition</h2>
                                 <p class="filter-list__item-text">Дизайн</p>
@@ -130,8 +173,13 @@
                         </a>
                     </li>
                     <li class="filter-list__item">
-                        <a href="#" class="filter-link"><img class="filter-list__item-img"
-                                src="images/portfolio-img-8.jpg" alt="Проєкт LAB">
+                        <a href="#" class="filter-link">
+                            <div class="filter-link-thumb">
+                                <img class="filter-list__item-img" src="images/portfolio-img-8.jpg" alt="Проєкт LAB">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="filter-list__item-border">
                                 <h2 class="filter-list__item-title">Проєкт LAB</h2>
                                 <p class="filter-list__item-text">Маркетинг</p>
@@ -139,8 +187,14 @@
                         </a>
                     </li>
                     <li class="filter-list__item">
-                        <a href="#" class="filter-link"><img class="filter-list__item-img"
-                                src="images/portfolio-img-9.jpg" alt="Додаток Growing Business">
+                        <a href="#" class="filter-link">
+                            <div class="filter-link-thumb">
+                                <img class="filter-list__item-img" src="images/portfolio-img-9.jpg"
+                                    alt="Додаток Growing Business">
+                                <p class="thumb-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу
+                                    та сервісів. Все це дозволить відвідувачу отримати
+                                    вичерпні відомості про компанію чи приватну особу.</p>
+                            </div>
                             <div class="filter-list__item-border">
                                 <h2 class="filter-list__item-title">Growing Business</h2>
                                 <p class="filter-list__item-text">Додаток</p>
